--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона - фото и видео</title>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/icons/favicon.ico">
   <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/icons/180.png">
-  <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.min.css" rel="stylesheet">
   <link rel="preload" href="fonts/ptsans.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/ptsansbold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -103,7 +102,7 @@
               </div>
               <p class="image-container__likes">
                 <svg class="image-container__likes-icon" width="23" height="21">
-                  <use xlink:href="sprite.svg#icon-like"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-like"></use>
                 </svg>
                 <span class="image-container__likes-count">1350</span>
               </p>
@@ -137,7 +136,7 @@
               </div>
               <p class="image-container__likes">
                 <svg class="image-container__likes-icon" width="23" height="21">
-                  <use xlink:href="sprite.svg#icon-like"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-like"></use>
                 </svg>
                 <span class="image-container__likes-count">143</span>
               </p>
@@ -171,7 +170,7 @@
               </div>
               <p class="image-container__likes">
                 <svg class="image-container__likes-icon" width="23" height="21">
-                  <use xlink:href="sprite.svg#icon-like"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-like"></use>
                 </svg>
                 <span class="image-container__likes-count">96</span>
               </p>
@@ -206,7 +205,7 @@
               </div>
               <p class="image-container__likes">
                 <svg class="image-container__likes-icon" width="23" height="21">
-                  <use xlink:href="sprite.svg#icon-like"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-like"></use>
                 </svg>
                 <span class="image-container__likes-count">254</span>
               </p>
@@ -240,27 +239,27 @@
           </picture>
         </div>
         <div class="video-box__controls controls-set">
-          <div class="controls-set__replay">
+          <button class="controls-set__replay" type="button" aria-label="Воспроизвести повторно">
             <svg class="controls-set__replay-icon" width="16" height="20">
-              <use xlink:href="sprite.svg#icon-video-replay"></use>
+              <use xlink:href="img/icons/sprite.svg#icon-video-replay"></use>
             </svg>
-          </div>
+          </button>
           <div class="controls-set__playbar">
-            <div class="controls-set__slider" aria-label="Видео слайдер">
+            <div class="controls-set__slider">
             </div>
-            <div class="controls-set__scale" aria-label="Видео шкала">
+            <div class="controls-set__scale">
             </div>
           </div>
-          <div class="controls-set__subtitles">
+          <button class="controls-set__subtitles" type="button" aria-label="Показать субтитры">
             <svg class="controls-set__subtitles-icon" width="32" height="20">
-              <use xlink:href="sprite.svg#icon-video-subtitles"></use>
+              <use xlink:href="img/icons/sprite.svg#icon-video-subtitles"></use>
             </svg>
-          </div>
-          <div class="controls-set__fullscreen">
+          </button>
+          <button class="controls-set__fullscreen" type="button" aria-label="Полноэкранный режим">
             <svg class="controls-set__fullscreen-icon" width="20" height="20">
-              <use xlink:href="sprite.svg#icon-video-fullscreen"></use>
+              <use xlink:href="img/icons/sprite.svg#icon-video-fullscreen"></use>
             </svg>
-          </div>
+          </button>
         </div>
       </section>
     </main>
@@ -275,21 +274,21 @@
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Твиттер</span>
                 <svg class="socials__button-twitter" width="18" height="15">
-                  <use xlink:href="sprite.svg#icon-twitter"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Фейсбук</span>
                 <svg class="socials__button-facebook" width="9" height="19">
-                  <use xlink:href="sprite.svg#icon-facebook"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Youtube</span>
                 <svg class="socials__button-youtube" width="20" height="14">
-                  <use xlink:href="sprite.svg#icon-youtube"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-youtube"></use>
                 </svg>
               </a>
             </li>
@@ -300,7 +299,7 @@
           <span class="page-footer__desc">Разработано</span>
           <a class="page-footer__link" href="https://htmlacademy.ru/intensive/adaptive">
             <svg class="page-footer__link-icon" width="27" height="35" aria-label="HTML Academy">
-              <use xlink:href="sprite.svg#htmlacademy-logo"></use>
+              <use xlink:href="img/icons/sprite.svg#htmlacademy-logo"></use>
             </svg>
           </a>
         </section>
