--- a/source/form.html
+++ b/source/form.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона - оставьте свой отзыв!</title>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/icons/favicon.ico">
   <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/icons/180.png">
-  <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.min.css" rel="stylesheet">
   <link rel="preload" href="fonts/ptsans.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/ptsansbold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -74,18 +73,18 @@
             <p class="section-title__content">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о
               посещенных Вами достопримечательностях</p>
           </header>
-          <form class="feedback-form__block" action="https://echo.htmlacademy.ru" method="get" target="_blank">
+          <form class="feedback-form__block" action="https://echo.htmlacademy.ru" method="get" target="_blank" novalidate>
             <fieldset class="feedback-form__fieldset fieldset-identity">
               <p class="feedback-form__legend">Представьтесь:</p>
               <p class="fieldset-identity__line">
                 <label class="fieldset-identity__label" for="identity-forename">Имя*:</label>
-                <input class="fieldset-identity__input" type="text" id="identity-forename" name="identity-forename"
-                  placeholder="Петр">
+                <input class="fieldset-identity__input" type="text" data-forename="identity-forename" id="identity-forename" name="identity-forename"
+                  placeholder="Петр" required>
               </p>
               <p class="fieldset-identity__line">
                 <label class="fieldset-identity__label" for="identity-surname">Фамилия*:</label>
-                <input class="fieldset-identity__input" type="text" id="identity-surname" name="identity-surname"
-                  placeholder="Иванов">
+                <input class="fieldset-identity__input" type="text" data-surname="identity-surname" id="identity-surname" name="identity-surname"
+                  placeholder="Иванов" required>
               </p>
               <p class="fieldset-identity__line">
                 <label class="fieldset-identity__label" for="identity-middlename">Отчество:</label>
@@ -98,14 +97,14 @@
               <p class="fieldset-contacts__line fieldset-contacts__line--phone">
                 <label class="fieldset-contacts__label fieldset-contacts__label--phone" for="contacts-phone"><span
                     class="fieldset-contacts__hidden">Контактный </span>телефон*:</label>
-                <input class="fieldset-contacts__input" type="tel" id="contacts-phone" name="contacts-phone"
-                  placeholder="Введите телефон">
+                <input class="fieldset-contacts__input" type="tel" data-phone="contacts-phone" id="contacts-phone" name="contacts-phone"
+                  placeholder="Введите телефон" required>
               </p>
               <p class="fieldset-contacts__line fieldset-contacts__line--email">
                 <label class="fieldset-contacts__label fieldset-contacts__label--email" for="contacts-mail">Электронная
                   почта*:</label>
-                <input class="fieldset-contacts__input" type="email" id="contacts-mail" name="contacts-mail"
-                  placeholder="Введите e-mail">
+                <input class="fieldset-contacts__input" type="email" data-mail="contacts-mail" id="contacts-mail" name="contacts-mail"
+                  placeholder="Введите e-mail" required>
               </p>
             </fieldset>
             <fieldset class="feedback-form__fieldset fieldset-impression">
@@ -158,7 +157,7 @@
               <textarea class="fieldset-emotions__textarea" rows="10" cols="40" name="emotions"
                 placeholder="Опишите подробно все свои восторги"></textarea>
             </fieldset>
-            <button class="feedback-form__button" type="submit">Отправить отзыв</button>
+            <button class="feedback-form__button" type="button">Отправить отзыв</button>
             <p class="feedback-form__info">* — обязательные поля</p>
           </form>
         </div>
@@ -197,21 +196,21 @@
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Твиттер</span>
                 <svg class="socials__button-twitter" width="18" height="15">
-                  <use xlink:href="sprite.svg#icon-twitter"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Фейсбук</span>
                 <svg class="socials__button-facebook" width="9" height="19">
-                  <use xlink:href="sprite.svg#icon-facebook"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Youtube</span>
                 <svg class="socials__button-youtube" width="20" height="14">
-                  <use xlink:href="sprite.svg#icon-youtube"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-youtube"></use>
                 </svg>
               </a>
             </li>
@@ -222,7 +221,7 @@
           <span class="page-footer__desc">Разработано</span>
           <a class="page-footer__link" href="https://htmlacademy.ru/intensive/adaptive">
             <svg class="page-footer__link-icon" width="27" height="35" aria-label="HTML Academy">
-              <use xlink:href="sprite.svg#htmlacademy-logo"></use>
+              <use xlink:href="img/icons/sprite.svg#htmlacademy-logo"></use>
             </svg>
           </a>
         </section>
