--- a/source/index.html
+++ b/source/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Добро пожаловать в Седону!</title>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/icons/favicon.ico">
   <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/icons/180.png">
-  <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.min.css" rel="stylesheet">
   <link rel="preload" href="fonts/ptsans.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/ptsansbold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -190,21 +189,21 @@
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Твиттер</span>
                 <svg class="socials__button-twitter" width="18" height="15">
-                  <use xlink:href="sprite.svg#icon-twitter"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Фейсбук</span>
                 <svg class="socials__button-facebook" width="9" height="19">
-                  <use xlink:href="sprite.svg#icon-facebook"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__button" href="#"><span class="visually-hidden">Youtube</span>
                 <svg class="socials__button-youtube" width="20" height="14">
-                  <use xlink:href="sprite.svg#icon-youtube"></use>
+                  <use xlink:href="img/icons/sprite.svg#icon-youtube"></use>
                 </svg>
               </a>
             </li>
@@ -215,7 +214,7 @@
           <span class="page-footer__desc">Разработано</span>
           <a class="page-footer__link" href="https://htmlacademy.ru/intensive/adaptive">
             <svg class="page-footer__link-icon" width="27" height="35" aria-label="HTML Academy">
-              <use xlink:href="sprite.svg#htmlacademy-logo"></use>
+              <use xlink:href="img/icons/sprite.svg#htmlacademy-logo"></use>
             </svg>
           </a>
         </section>
